--- a/README
+++ b/README
@@ -7,3 +7,10 @@
 pip install -r requirements.txt
 # Or just install yt-dlp directly:
 pip install yt-dlp
+
+## Disclaimer
+This tool is intended for **personal and educational use only**.  
+Downloading content from YouTube or other platforms may violate their Terms of Service.  
+Ensure you have permission or rights to download and use any media.
+
+The developer is **not responsible** for any misuse of this tool.
